tests/NormalTests/paczka1/small_fuzzy/73305976.err
Error in line 2: o6OrZxlh A282 51,8
Error in line 8: M3qefCHPc0 A282 61,6
Error in line 7: ytq6CX A586 47,3
